tests/test0193.exp
Parse error, unexpected : ( tests/test0193.ctr: 4 )
Recipient cannot be followed by a colon.
Got signal 'Segmentation fault', quitting
