tests/test0193.ctr
# Proper parse error with line number
a is '
 line number 4... '.
Pen write: 'testje.ctr' + grep: 'Shell'.

